--- a/src/_Game/Fxml/Frame.fxml
+++ b/src/_Game/Fxml/Frame.fxml
@@ -14,7 +14,6 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.control.ToolBar?>
-<?import javafx.scene.effect.Blend?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.effect.InnerShadow?>
 <?import javafx.scene.image.Image?>
@@ -42,7 +41,10 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
-      <Canvas fx:id="CanvasId" accessibleRole="BUTTON" focusTraversable="true" height="559.0" layoutX="13.0" layoutY="114.0" onMouseDragged="#CanvasPressed" onMousePressed="#CanvasPressed" pickOnBounds="true" style="-fx-effect: dropshadow(one-pass-box, rgba(0,0,0,1), 5, 5, 0, 0);" width="1252.0" />
+      <Canvas fx:id="CanvasId" accessibleRole="BUTTON" focusTraversable="true" height="559.0" layoutX="13.0" layoutY="114.0" onMouseDragged="#CanvasPressed" onMousePressed="#CanvasPressed" pickOnBounds="true" style="-fx-effect: dropshadow(one-pass-box, rgba(0,0,0,1), 5, 5, 0, 0); fx-cursor: WHITE;" width="1252.0">
+         <cursor>
+            <Cursor fx:constant="DEFAULT" />
+         </cursor></Canvas>
       <Button fx:id="stopButton" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="163.0" layoutY="689.0" mnemonicParsing="false" onAction="#clickedStopButton" prefHeight="33.0" prefWidth="98.0" scaleShape="false" style="-fx-border-color: BLACK; -fx-border-radius: 3;" text="STOP">
          <font>
             <Font name="System Bold" size="12.0" />
@@ -114,12 +116,12 @@
             <Cursor fx:constant="HAND" />
          </cursor></Button>
       <TextField fx:id="textBox" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="654.0" layoutY="692.0" prefHeight="27.0" prefWidth="109.0" promptText="Pattern Link" scaleShape="false" style="-fx-border-color: black; -fx-border-radius: 3;">
-         <effect>
-            <Blend />
-         </effect>
          <cursor>
             <Cursor fx:constant="TEXT" />
-         </cursor></TextField>
+         </cursor>
+         <effect>
+            <InnerShadow blurType="ONE_PASS_BOX" radius="4.875" width="0.5" />
+         </effect></TextField>
       <Button fx:id="drawPattern" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="769.0" layoutY="730.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="109.0" scaleShape="false" style="-fx-border-color: black; -fx-border-radius: 3;" text="Draw">
          <effect>
             <InnerShadow blurType="ONE_PASS_BOX" />
@@ -186,6 +188,9 @@
                </font>
             </Button>
          </items>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </ToolBar>
       <ImageView fitHeight="56.0" fitWidth="56.0" layoutX="315.0" layoutY="50.0">
          <image>
